--- a/index.html
+++ b/index.html
@@ -27,14 +27,6 @@
     <!-- Dashboard Core -->
     <link href="./asset/css/dashboard.css" rel="stylesheet" />
     <script src="./assets/js/dashboard.js"></script>
-    <!-- c3.js Charts Plugin -->
-    <link href="./assets/plugins/charts-c3/plugin.css" rel="stylesheet" />
-    <script src="./assets/plugins/charts-c3/plugin.js"></script>
-    <!-- Google Maps Plugin -->
-    <link href="./assets/plugins/maps-google/plugin.css" rel="stylesheet" />
-    <script src="./assets/plugins/maps-google/plugin.js"></script>
-    <!-- Input Mask Plugin -->
-    <script src="./assets/plugins/input-mask/plugin.js"></script>
   </head>
   <body class="">
     <div class="page">
@@ -46,8 +38,6 @@
                 <img src="asset/img/svg/tabler/tabler@1x.png" class="header-brand-img" alt="tabler logo">
               </a>
               <div class="d-flex order-lg-2 ml-auto">
-                
-
                 <div class="dropdown">
                   <a href="#" class="nav-link pr-0 leading-none" data-toggle="dropdown">
                     <span class="avatar" style="background-image: url(asset/img/master_perfil.jpg)"></span>
@@ -70,18 +60,18 @@
               <div class="col-lg order-lg-first">
                 <ul class="nav nav-tabs border-0 flex-column flex-lg-row">
                   <li class="nav-item">
-                    <a href="./index.html" class="nav-link"><i class="fe fe-home"></i> Home</a>
+                    <a href="#home" class="nav-link"><i class="fe fe-home"></i> Home</a>
                   </li>
-                  <li class="nav-item">
+                  <!--li class="nav-item">
                     <a href="javascript:void(0)" class="nav-link" data-toggle="dropdown"><i class="fe fe-box"></i>Contributions</a>
                     <div class="dropdown-menu dropdown-menu-arrow">
                       <a href="./cards.html" class="dropdown-item ">Cards design</a>
                       <a href="./charts.html" class="dropdown-item ">Charts</a>
                       <a href="./pricing-cards.html" class="dropdown-item ">Pricing cards</a>
                     </div>
-                  </li>
+                  </li>-->
                   <li class="nav-item dropdown">
-                    <a href="javascript:void(0)" class="nav-link active" data-toggle="dropdown"><i class="fe fe-calendar"></i> Events</a>
+                    <a href="#events" class="nav-link active" data-toggle="dropdown"><i class="fe fe-calendar"></i> Events</a>
                     <div class="dropdown-menu dropdown-menu-arrow">
                       <a href="./maps.html" class="dropdown-item ">Maps</a>
                       <a href="./icons.html" class="dropdown-item ">Icons</a>
@@ -90,10 +80,10 @@
                       <a href="./carousel.html" class="dropdown-item ">Carousel</a>
                     </div>
                   </li>
-                  <li class="nav-item dropdown">
+                  <!--<li class="nav-item dropdown">
                     <a href="javascript:void(0)" class="nav-link" data-toggle="dropdown"><i class="fe fe-file"></i>Contacts</a>
                     <div class="dropdown-menu dropdown-menu-arrow">
-                      <a href="./profile.html" class="dropdown-item ">Profile</a>
+                      <a href="#" class="dropdown-item ">Profile</a>
                       <a href="./login.html" class="dropdown-item ">Login</a>
                       <a href="./register.html" class="dropdown-item ">Register</a>
                       <a href="./forgot-password.html" class="dropdown-item ">Forgot password</a>
@@ -107,7 +97,7 @@
                       <a href="./empty.html" class="dropdown-item ">Empty page</a>
                       <a href="./rtl.html" class="dropdown-item ">RTL mode</a>
                     </div>
-                  </li>
+                  </li>-->
                 </ul>
               </div>
             </div>
@@ -128,9 +118,9 @@
                     <h4><a href="#">And this isn't my nose. This is a false one.</a></h4>
                     <div class="text-muted">Look, my liege! The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migr...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/female18.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/female1.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Rose Bradley</a>
+                        <a href="#" class="text-default">Rose Bradley</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -147,9 +137,9 @@
                     <h4><a href="#">Well, I didn't vote for you.</a></h4>
                     <div class="text-muted">Well, we did do the nose. Why? Shut up! Will you shut up?! You don't frighten us, English pig-dog...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male16.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male3.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Peter Richards</a>
+                        <a href="#" class="text-default">Peter Richards</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -166,9 +156,9 @@
                     <h4><a href="#">How do you know she is a witch?</a></h4>
                     <div class="text-muted">Are you suggesting that coconuts migrate? No, no, no! Yes, yes. A bit. But she's got a wart. You ...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male26.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male2.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Wayne Holland</a>
+                        <a href="#" class="text-default">Wayne Holland</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -185,9 +175,9 @@
                     <h4><a href="#">Shut up!</a></h4>
                     <div class="text-muted">Burn her! How do you know she is a witch? You don't frighten us, English pig-dogs! Go and boil yo...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/female7.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/female5.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Michelle Ross</a>
+                        <a href="#" class="text-default">Michelle Ross</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -203,9 +193,9 @@
                     <h4><a href="#">Weaseling out of things is important to learn.</a></h4>
                     <div class="text-muted">Please do not offer my god a peanut. That's why I love elementary school, Edna. The children beli...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male4.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male3.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Bobby Knight</a>
+                        <a href="#" class="text-default">Bobby Knight</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -221,9 +211,9 @@
                     <h4><a href="#">You don't like your job, you don't strike.</a></h4>
                     <div class="text-muted">But, Aquaman, you cannot marry a woman without gills. You're from two different worlds… Oh, I've ...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male35.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male4.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Craig Anderson</a>
+                        <a href="#" class="text-default">Craig Anderson</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -239,9 +229,9 @@
                     <h4><a href="#">I hope I didn't brain my damage.</a></h4>
                     <div class="text-muted">I don't like being outdoors, Smithers. For one thing, there's too many fat children. Oh, loneline...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/female29.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/female2.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Crystal Wallace</a>
+                        <a href="#" class="text-default">Crystal Wallace</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -251,6 +241,17 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="my-3 my-md-5">
+            <div class="container">
+              <div class="page-header">
+                <h1 class="page-title" id="events">
+                  Events
+                </h1>
+              </div>
+            <div class="row row-cards row-deck">
               <div class="col-lg-6">
                 <div class="card card-aside">
                   <a href="#" class="card-aside-column" style="background-image: url(asset/img/david-klaasen-54203-500.jpg)"></a>
@@ -258,9 +259,9 @@
                     <h4><a href="#">And this isn't my nose. This is a false one.</a></h4>
                     <div class="text-muted">Look, my liege! The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migr...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/female18.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male3.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Rose Bradley</a>
+                        <a href="#" class="text-default">Rose Bradley</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -277,9 +278,9 @@
                     <h4><a href="#">Well, I didn't vote for you.</a></h4>
                     <div class="text-muted">Well, we did do the nose. Why? Shut up! Will you shut up?! You don't frighten us, English pig-dog...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male16.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male5.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Peter Richards</a>
+                        <a href="#" class="text-default">Peter Richards</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -296,9 +297,9 @@
                     <h4><a href="#">Weaseling out of things is important to learn.</a></h4>
                     <div class="text-muted">Please do not offer my god a peanut. That's why I love elementary school, Edna. The children believe anything you tell them. Brace yourselves gentlemen. According to the gas chromatograph, the secr...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male4.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male3.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Bobby Knight</a>
+                        <a href="#" class="text-default">Bobby Knight</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -315,9 +316,9 @@
                     <h4><a href="#">You don't like your job, you don't strike.</a></h4>
                     <div class="text-muted">But, Aquaman, you cannot marry a woman without gills. You're from two different worlds… Oh, I've wasted my life. Son, when you participate in sporting events, it's not whether you win or lose: it's...</div>
                     <div class="d-flex align-items-center pt-5 mt-auto">
-                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male35.jpg)"></div>
+                      <div class="avatar avatar-md mr-3" style="background-image: url(asset/img/male1.jpg)"></div>
                       <div>
-                        <a href="./profile.html" class="text-default">Craig Anderson</a>
+                        <a href="#" class="text-default">Craig Anderson</a>
                         <small class="d-block text-muted">3 days ago</small>
                       </div>
                       <div class="ml-auto text-muted">
@@ -338,24 +339,24 @@
               <div class="row">
                 <div class="col-6 col-md-3">
                   <ul class="list-unstyled mb-0">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                   </ul>
                 </div>
-                <div class="col-6 col-md-3">
+                <!--<div class="col-6 col-md-3">
                   <ul class="list-unstyled mb-0">
                     <li><a href="#">Contributions </a></li>
                   </ul>
-                </div>
+                </div>-->
                 <div class="col-6 col-md-3">
                   <ul class="list-unstyled mb-0">
-                    <li><a href="#">Events</a></li>
+                    <li><a href="#events">Events</a></li>
                   </ul>
                 </div>
-                <div class="col-6 col-md-3">
+                <!--<div class="col-6 col-md-3">
                   <ul class="list-unstyled mb-0">
                     <li><a href="#">Contacts</a></li>
                   </ul>
-                </div>
+                </div>-->
               </div>
             </div>
             <div class="col-lg-4 mt-4 mt-lg-0">
