--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Jonh's</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext">
-    <script src="./assets/js/require.min.js"></script>
+    <script src="./asset/js/require.min.js"></script>
     <script>
       requirejs.config({
           baseUrl: '.'
@@ -26,7 +26,7 @@
     </script>
     <!-- Dashboard Core -->
     <link href="./asset/css/dashboard.css" rel="stylesheet" />
-    <script src="./assets/js/dashboard.js"></script>
+    <script src="./asset/js/dashboard.js"></script>
   </head>
   <body class="">
     <div class="page">
